# stm32-

./: README.md
DrogonServer/HTTP/: CMakeLists.txt  config.json  main.cc
DrogonServer/HTTP/controllers/: User.cc  User.h
DrogonServer/HTTP/test/: CMakeLists.txt
PC_client/: package-lock.json  package.json  vue.config.js
PC_client/src/: App.vue  main.js
PC_client/src/components/: CommonAside.vue  CommonHeader.vue  Device.vue  Map.vue  ValueCH4.vue  ValueCO.vue  ValueCO2.vue  ValueH2.vue
PC_client/src/plugins/: axios.js  charts.js  index.js
PC_client/src/router/: index.js
PC_client/src/store/: index.js
PC_client/src/views/: DataCenter.vue  Home.vue  Index.vue  Login.vue  MonitoringCenter.vue  Setting.vue
data_view/: package-lock.json  vue.config.js
data_view/public/: index.html
data_view/src/mock/: mock.js
data_view/src/router/: index.js
data_view/src/store/: index.js
data_view/src/views/: home.vue
embedded/: AD.c
embedded/APP/: app.c  app.h
embedded/HADEWARE/ADC/: JW.c  JW.h  MQ4_adc.c  MQ7_adc.c  adc.h
embedded/HADEWARE/BEEP/: beep.c  beep.h
embedded/HADEWARE/KEY/: key.c  key.h
embedded/HADEWARE/LED/: led.c  led.h
embedded/HADEWARE/OLED/: codetab.h  oled.c  oled.h
embedded/NET_DEVICE/: esp8266.c
embedded/OneNet/: onenet.c
embedded/SYSTEM/: usart.c  usart.h
embedded/USER/: Template.uvguix.0XFFFF  Template.uvguix.15275  Template.uvguix.bsx520  Template.uvoptx  Template.uvprojx  main.c
embedded/jx_firm/: readme.txt  ϵͳ_20240331001.json
mobile_client/: manifest.json  pages.json
oneNet_client/: pom.xml
snr固件/uni_hb_m_solution/: build.properties
模块购买BOM/: BOM_气体监测_2024-04-16.csv
(+156 files in other folders)
